# agentRAG

./: .env.example  .gitignore  LICENSE  PROJECT_NORMS.md  README.md  main.py  pyproject.toml  run.py
app/: agent.py  llm.py  main.py  settings.py  tools.py
app/memory.example/: application-security-basics.md  docker-and-containers.md  encoding-and-unicode.md  filesystem-paths-and-permissions.md  git-workflows.md  hardware.md  http-and-apis.md  kubernetes-overview.md  linux-and-shell-basics.md  message-queues-and-streams.md  networking-tcp-ip-dns.md  nosql-and-cache.md  observability-and-logging.md  ollama-local-inference.md  processors-cpu.md  python-fastapi-ollama.md  python-packaging-and-uv.md  rag-and-search-patterns.md  ram-memory.md  software-architecture-patterns.md  software.md  sql-databases.md  storage-drives.md  technologies.md  testing-and-ci.md  time-and-timezones.md  tls-https-basics.md  video-cards-gpu.md  windows-and-wsl.md
app/tools/: __init__.py  base.py  contracts.py  registry.py
app/tools/impl/: memory.py  memory_repository.py  memory_tools.py  system_clock.py  system_tools.py
static/: index.html
static/css/: chat.css
static/js/: chat.js
tests/: test_chat_api.py  test_memory_tools.py  test_scalability.py  test_tools_registry.py
